refactor(docs): remove completed setup phase and reorder roadmap starting with Travel module

--- a/index.html
+++ b/index.html
@@ -219,43 +219,15 @@
 
     <header>
         <h1>Development Roadmap</h1>
-        <p>Implementasi AI Agent WhatsApp (n8n) untuk Sistem Sekolah & Travel</p>
+        <p>Implementasi AI Agent WhatsApp (n8n)</p>
     </header>
 
     <div class="timeline">
         
         <div class="container left">
             <div class="content">
-                <h2>Fase 1: Setup & Integrasi Dasar</h2>
+                <h2>Fase 1: Modul Travel & Umroh</h2>
                 <span class="date">28 Nov - 4 Des 2025</span>
-                <p>Membangun fondasi koneksi antara WhatsApp API dan engine n8n.</p>
-                <ul>
-                    <li>Setup Server n8n (Self-hosted/Cloud).</li>
-                    <li>Konfigurasi WhatsApp Business API.</li>
-                    <li>Pembuatan <strong>Main Router</strong> (Decision Node Awal).</li>
-                    <li>Integrasi Database Dasar (Google Sheets).</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="container right">
-            <div class="content">
-                <h2>Fase 2: Modul Sekolah (Abat/FG)</h2>
-                <span class="date">5 Des - 11 Des 2025</span>
-                <p>Implementasi logika percakapan untuk administrasi sekolah sesuai flowchart.</p>
-                <ul>
-                    <li>Flow <strong>PPDB</strong> (Pendaftaran & Link Form).</li>
-                    <li>Flow <strong>Cek Tagihan</strong> (Lookup Database Siswa).</li>
-                    <li>Logika Integrasi Link Pembayaran (Flip/FGapps).</li>
-                    <li>Sistem QnA Otomatis untuk pertanyaan umum wali murid.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="container left">
-            <div class="content">
-                <h2>Fase 3: Modul Travel & Umroh</h2>
-                <span class="date">12 Des - 18 Des 2025</span>
                 <p>Implementasi logika percakapan kompleks untuk calon jamaah.</p>
                 <ul>
                     <li>Decision Logic: <strong>Umroh vs Haji</strong>.</li>
@@ -268,8 +240,22 @@
 
         <div class="container right">
             <div class="content">
-                <h2>Fase 4: Automasi & Penjadwalan</h2>
-                <span class="date">19 Des - 25 Des 2025</span>
+                <h2>Fase 2: Modul Sekolah (Abat/FG)</h2>
+                <span class="date">5 Des - 11 Des 2025</span>
+                <p>Implementasi logika percakapan untuk administrasi sekolah.</p>
+                <ul>
+                    <li>Flow <strong>PPDB</strong> (Pendaftaran & Link Form).</li>
+                    <li>Flow <strong>Cek Tagihan</strong> (Lookup Database Siswa).</li>
+                    <li>Logika Integrasi Link Pembayaran (Flip/FGapps).</li>
+                    <li>Sistem QnA Otomatis untuk pertanyaan umum wali murid.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <h2>Fase 3: Automasi & Penjadwalan</h2>
+                <span class="date">12 Des - 18 Des 2025</span>
                 <p>Mengaktifkan fitur otomatisasi berbasis waktu (Cron & Wait Nodes).</p>
                 <ul>
                     <li>Scheduler: <strong>Cek Tagihan (Tgl 10 tiap bulan)</strong>.</li>
@@ -280,10 +266,10 @@
             </div>
         </div>
 
-        <div class="container left">
+        <div class="container right">
             <div class="content">
-                <h2>Fase 5: Testing & Deployment</h2>
-                <span class="date">26 Des 2025 - 1 Jan 2026</span>
+                <h2>Fase 4: Testing & Deployment</h2>
+                <span class="date">19 Des - 25 Des 2025</span>
                 <p>Uji coba menyeluruh dan serah terima sistem.</p>
                 <ul>
                     <li>Internal Testing (Flow Logic & Error Handling).</li>
